# organ

./: .gitignore  Dockerfile  README.md  ams1-orgs  catalog.ipynb  ingest_org.rb  orgs.csv  orgs.ipynb  pyproject.toml
organ/: __init__.py  api.py  app.py  auth.py  config.py  crud.py  db.py  fields.py  main.py  models.py  oauth.py  views.py
scripts/: dev
static/: main.css
templates/: login.html  organization_detail.html  ov-catalog.html  ov_catalog.html  signin_github.html  signin_google.html
templates/displays/: show_image.html  showimage.html
templates/modals/: upload_csv.html
