[tool.pdm]

[build-system]
requires = ['pdm-backend']
build-backend = 'pdm.backend'

[project]
name = "organ"
version = "0.1.0"
description = ""
authors = [
    {name = "foglabs", email = "henry_neels@wgbh.org"},
]
dependencies = [
    "fastapi>=0.95.1",
    "uvicorn>=0.22.0",
    "sqlmodel>=0.0.8",
    "psycopg2>=2.9.6",
    "starlette-admin>=0.8.2",
    "itsdangerous>=2.1.2",
]
requires-python = ">=3.9"
license = {text = "MIT"}

[project.optional-dependencies]
production = [
    "gunicorn>=22.0.0",
    "uvicorn>=0.30.5",
]
