[build-system]
requires = ['pdm-backend']
build-backend = 'pdm.backend'

[project]
name = "organ"
version = "0.1.0"
description = ""
authors = [
    { name = "harpo", email = "ryan_harbert@wgbh.org" },
    { name = "foglabs", email = "henry_neels@wgbh.org" },
]
dependencies = [
    "fastapi>=0.111.1",
    "uvicorn>=0.30.3",
    "sqlmodel>=0.0.21",
    "psycopg2>=2.9.9",
    "starlette-admin>=0.14.1",
    "itsdangerous>=2.2.0",
    "fastcrud>=0.13.1",
    "asyncpg>=0.29.0",
    "pydantic>=2.8.2",
    "logfire>=0.49.0",
]
requires-python = ">=3.9"
license = { text = "MIT" }

[project.optional-dependencies]
production = ["gunicorn~=22.0", "uvicorn~=0.30"]

[tool.pdm.dev-dependencies]
dev = ["uvicorn~=0.30", "black~=24.8", "ruff~=0.5"]

[tool.ruff.format]
quote-style = 'single'

[tool.lint]
ignore = ['Q000']
select = [
    'B', # flake8-bugbear
    'C4', # flake8-comprehensions
    'C90', # mccabe
    'E', # pycodestyle errors
    'ERA', # eradicate
    'F', # pyflakes
    # 'I', # isort
    'INT', # flake8-gettext
    'N', # pep8-naming
    'PIE', # flake8-pie,
    'PLC', # pylint - convention
    'PLE', # pylint - error
    'PLW', # pylint - warning
    'Q', # flake8-quotes
    'RET', # flake8-return,
    'RUF', # Ruff-specific rules
    'SIM', # flake8-simplify
    'UP', # pyupgrade
    'W', # pycodestyle warnings

]
