[build-system]
requires = ['pdm-backend']
build-backend = 'pdm.backend'

[project]
name = "organ"
version = "0.1.0"
description = ""
authors = [
    { name = "harpo", email = "ryan_harbert@wgbh.org" },
    { name = "foglabs", email = "henry_neels@wgbh.org" },
]
dependencies = [
    "fastapi~=0.115",
    "sqlmodel~=0.0",
    "psycopg2-binary~=2.9",
    "starlette-admin~=0.15",
    "itsdangerous~=2.2",
    "fastcrud~=0.15",
    "asyncpg~=0.30",
    "pydantic~=2.11",
    "fastapi-oauth2~=1.3",
    "loguru>=0.7.3",
]
requires-python = ">=3.9"
license = { text = "MIT" }

[project.optional-dependencies]
production = ["gunicorn~=23.0", "uvicorn~=0.34"]

[tool.ruff.format]
quote-style = 'single'

[tool.lint]
ignore = ['Q000']
select = [
    'B',   # flake8-bugbear
    'C4',  # flake8-comprehensions
    'C90', # mccabe
    'E',   # pycodestyle errors
    'ERA', # eradicate
    'F',   # pyflakes
    # 'I', # isort
    'INT', # flake8-gettext
    'N',   # pep8-naming
    'PIE', # flake8-pie,
    'PLC', # pylint - convention
    'PLE', # pylint - error
    'PLW', # pylint - warning
    'Q',   # flake8-quotes
    'RET', # flake8-return,
    'RUF', # Ruff-specific rules
    'SIM', # flake8-simplify
    'UP',  # pyupgrade
    'W',   # pycodestyle warnings

]

[dependency-groups]
dev = ["uvicorn~=0.34", "black~=25.1", "ruff~=0.11"]
